--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server -p 3000",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --verbose"
   },
   "author": "",
   "license": "ISC",
